# syri

./: .cursorrules  .envtemplate  .gitignore  README.md  correct.py  pyproject.toml  requirements.txt  run-with-task-manager.py  run.py  test.py  test2.py  test3.py
gateways/pkg/board/: service.go
gateways/pkg/board/repository/: repository.go
gateways/pkg/board/repository/memory/: repository.go
scripts/: abort_execution.sh  mic_test.py  pygame_tts_test.py  start_listening.sh  start_server.sh  stop_listening.sh  stop_server.sh  stt_test.py  toggle_listening.sh  tts_speed_test.py  tts_test.py
src/: __init__.py  portkey.py  syri_agent.py  syri_agent_simpler.py
src/audio/: __init__.py  recorder.py  transcriber.py  tts.py
src/browser-agent/: .envtemplate  README.md  chrome_manager.py  gmail_agent.py  requirements.txt  run_gmail_agent.py  run_web_agent.py  web_agent.py
src/browser_agent/: README.md  chrome_manager.py  conversation_manager.py  run_web_agent.py  test.py  web_agent.py
src/state/: state_manager.py
src/task_management/: __init__.py  memory_repository.py  repository.py  service.py  task_processor.py  task_queue.py
src/transcription/: transcriber.py
src/tts/: speech_generator.py
src/utils/: __init__.py  config.py  system_helpers.py  system_utils.py  trigger_helpers.py
test/: test.py  web-use.py
~/: .asoundrc
